homepage/ise-tweeter/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweeter-auth
  namespace: ise-tweeter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweeter-auth
  template:
    metadata:
      labels:
        app: tweeter-auth
    spec:
      containers:
        - name: tweeter-auth
          image: docker.illegalesachen.download/uni/ise/auth:latest
      imagePullSecrets:
        - name: my-registry-secret
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: tweeter-auth-service
  namespace: ise-tweeter
  spec:
  selector:
    app: tweeter-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  clusterIP: None
