homepage/ise-tweeter/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweeter-frontend
  namespace: ise-tweeter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweeter-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: tweeter-frontend
    spec:
      imagePullSecrets:
        - name: my-registry-secret
      containers:
        - name: tweeter-frontend
          image: docker.illegalesachen.download/uni/ise/frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tweeter-frontend-service
  namespace: ise-tweeter
spec:
  selector:
    app: tweeter-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None
